# Aethera

./: .gitignore  .pre-commit-config.yaml  AI_IN_AETHERA.md  BACKEND_LOGS.md  CELERY_REDIS_SETUP.md  CORINE_DOWNLOAD_INSTRUCTIONS.md  CORINE_OPTIMIZATION_NOTES.md  COUNTRY_ANALYSES.md  DATA_DOWNLOAD_GUIDE.md  DEVELOPMENT.md  DOCKER_CONTAINERS_EXPLAINED.md  DOWNLOAD_STATUS.md  ENHANCEMENTS_IMPLEMENTED.md  GBIF_QUICK_REFERENCE.md  HOW_TO_STOP_SERVER.md  IMPLEMENTATION_STATUS.md  INSTALLATION_GUIDE.md  INSTALL_TIPPECANOE_WINDOWS.md  LAYER_DISPLAY_VERIFICATION.md  LINTING_FIXES.md  Makefile  PROJECT_REVIEW_REPORT.md  PROJECT_STATUS.md  PROTECTED_AREAS_ALTERNATIVES.md  QUICK_START.md  QUICK_START_GUIDE.md  Quick Start Services Guide.md  README.md  SETUP_COMPLETE.md  SOLOPYTHON_README.md  TESTING_GUIDE.md  VECTOR_TILES_FRONTEND_NOTES.md  VECTOR_TILES_IMPLEMENTATION.md  VECTOR_TILES_SETUP.md  WDPA_FORMAT_RECOMMENDATION.md  benchmarks.json  debugging_snippet.py  docker-compose.yml  env.example  optimized_params.json
Encyclopedia/: CELERY_TASK_FIX.md  COORDINATE_INPUT_GUIDE.md  CORINE_FORMAT_RECOMMENDATION.md  DATASET_CACHING.md  DATA_SOURCES.md  DATA_SOURCE_DECISIONS.md  DATA_SUMMARY.md  ENVIRONMENTAL_KPIS_BIBLIOGRAPHY.md  FORESTS_DATA_RECOMMENDATION.md  GADM_LEVELS_EXPLAINED.md  GBIF_DOWNLOAD_GUIDE.md  LANGCHAIN_INTEGRATION_SUMMARY.md  LANGCHAIN_SETUP.md  LEGAL_RULES_IMPLEMENTATION.md  MANUAL_DOWNLOADS.md  MAP_RENDERING_PIPELINE.md  MIGRATION.md  MODEL_PRETRAINING.md  OPEN_PROM_ANALYSIS.md  PHASE5_IMPLEMENTATION.md  PROJECT_EVALUATION_AND_ROADMAP.md  PROJECT_STATUS.md  QUICK_FIX_REDIS.md  README_original.md  SERVICES_SETUP.md  SETUP_PYTHON.md  START_BACKEND.md  START_SERVICES.md  (+7 more)
backend/: SETUP.md  pyproject.toml  pytest.ini
backend/src/: __init__.py  gis_handler.py  logging_utils.py  main_controller.py
backend/src/aethera_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/analysis/: ahsm_features.py  biodiversity.py  era5_client.py  explainability.py  kpis.py  land_cover.py  model_explainability.py  receptors.py  resm_features.py  temporal_extraction.py  timesfm_service.py  weather_features.py
backend/src/api/: __init__.py  app.py  models.py  storage.py
backend/src/api/routes/: __init__.py  audit.py  auth.py  biodiversity.py  cache.py  countries.py  governance.py  indicators.py  layers.py  observability.py  projects.py  reports.py  runs.py  tasks.py  tiles.py
backend/src/config/: base_settings.py  emission_factors.yaml
backend/src/config/legal_rules/: DEU.yaml  FRA.yaml  GRC.yaml  ITA.yaml
backend/src/datasets/: biodiversity_sources.py  cache.py  catalog.py
backend/src/db/: __init__.py  client.py  init_db.py  model_runs.py  schema.sql  schema_temporal.sql
backend/src/emissions/: __init__.py  calculator.py  factors.py
backend/src/governance/: __init__.py  ab_testing.py  drift.py  registry.py  validation.py
backend/src/legal/: __init__.py  evaluator.py  loader.py  parser.py  rules.py
backend/src/observability/: __init__.py  celery_instrumentation.py  metrics.py  performance.py  tracing.py
backend/src/reporting/: __init__.py  embeddings.py  engine.py  exports.py  langchain_llm.py  report_builder.py  report_memory.py  report_memory_db.py  text_generator.py  visualizations.py
backend/src/reporting/templates/: base_report.md.jinja  enhanced_report.md.jinja
backend/src/security/: __init__.py  audit.py  auth.py  middleware.py  oauth.py  rbac.py
backend/src/storage/: __init__.py  base.py  factory.py  local.py  s3.py
backend/src/utils/: __init__.py  dask_geopandas.py  dataset_checker.py  error_handling.py  geometry.py  tiling.py
backend/src/workers/: __init__.py  celery_app.py  task_tracker.py  tasks.py
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/integration/: __init__.py  test_api.py  test_celery.py  test_database.py  test_pipeline.py
backend/tests/unit/: __init__.py  test_api_models.py  test_dask_geopandas.py  test_emissions.py  test_geometry.py  test_governance.py  test_legal_rules.py  test_reporting.py  test_reporting_memory.py  test_storage.py  test_tiling.py
(+163 files in other folders)
